--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,16 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">22,800</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">34,589</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestCases.VerifyLoginTestCase</td><td><a href="#m0">login</a></td><td rowspan="1">1726914158854</td><td rowspan="1">632</td></tr><tr class="passedodd"><td rowspan="1">TestCases.VerifySignUpTestCase</td><td><a href="#m1">Signup</a></td><td rowspan="1">1726914165551</td><td rowspan="1">8473</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestCases.VerifySignUpTestCase</td><td><a href="#m0">Signup</a></td><td rowspan="1">1729236082969</td><td rowspan="1">11446</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestCases.VerifyLoginTestCase</td><td><a href="#m1">login</a></td><td rowspan="1">1729236074489</td><td rowspan="1">717</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">TestCases.VerifyLoginTestCase#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestCases.VerifySignUpTestCase#Signup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">TestCases.VerifySignUpTestCase#Signup</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	expected [Free CRM Trial: Salesforce 30-Day Trial - Salesforce IN] but found [Start Your 30-Day Free Trial - Salesforce IN]
+	at Resources.CommonUtilities.handleAssertion(CommonUtilities.java:20)
+	at TestCases.VerifySignUpTestCase.Signup(VerifySignUpTestCase.java:43)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestCases.VerifyLoginTestCase#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
